# stockpile

./: .gitignore  .gitmodules  LICENSE  README.md
stockpile/: Pile.cpp  Pile.h  PileCreator.cpp  PileDefinition.cpp  PileDefinition.h  PileDefinitionLoader.cpp  PileDefinitionLoader.h  PileHasher.cpp  PileHeaderCreator.cpp  PileReader.cpp  PileReader.h  PileWriter.cpp  ResourcePath.cpp  ResourcePath.h  main.cpp  pile.cpp  pilecreator.cpp  pilecreator.h  piledata.h  pilehasher.cpp  pileheadercreator.cpp  pilereader.cpp  pilewriter.cpp  pilewriter.h  stockpile.cpp  stockpile.h
stockpile.xcodeproj/: project.pbxproj
stockpile.xcworkspace/: contents.xcworkspacedata
stockpile/boostlib/: CMakeLists.txt
stockpile/include/: Pile.h  pile.h  resourcepath.h  stockpile.h
stockpile/lib/: CMakeLists.txt  pile.cpp  pilecreator.cpp  pilecreator.h  piledata.h  piledefinition.h  piledefinitionloader.cpp  pilehasher.cpp  pilehasher.h  pileheader.h  pileheadercreator.cpp  pileheadercreator.h  pilereader.cpp  pilereader.h  pilewriter.cpp  resourcepath.cpp  stockpile.cpp
stockpile/tests/: CMakeLists.txt  pile.json  test1.txt  tests.cpp
stockpile/tool/: CMakeLists.txt  main.cpp
stockpilelib/: stockpilelib.cpp  stockpilelib.hpp  stockpilelibPriv.hpp
stockpiletest/: CompressTest.cpp  Tests.cpp  main.cpp  test2.txt  tests.cpp
stockpiletest.xcodeproj/: project.pbxproj
